# cmake_101

branching_loop_funcs_scopes_macros/: functions.txt  if_else.txt  looping.txt  macros.txt  operators.txt  scoping.txt
branching_loop_funcs_scopes_macros/subdir_scoping/src/: CMakeLists.txt
branching_loop_funcs_scopes_macros/subdir_scoping/src/mod1/: CMakeLists.txt
calculator/: CMakeLists.txt  main.cpp
calculator/my_math_dir/: CMakeLists.txt
calculator/my_math_dir/include/: substractor.h
calculator/my_math_dir/src/: adder.cpp  substractor.cpp
calculator/my_print_dir/: CMakeLists.txt
calculator/my_print_dir/include/: print_result.h
calculator/my_print_dir/src/: print_result.cpp
docs/: notes.txt
greeter/: CMakeLists.txt
greeter/src/: CMakeLists.txt  greeter.cpp  greeter.h  main.cpp
msg_args_vars_lists_strings/: CMakeLists.txt
